plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'application'
}

group = 'br.com.felipemira'
version = 'unspecified'

compileJava {
    sourceCompatibility = 17
    targetCompatibility = 17
}


repositories {
    mavenCentral()
}

dependencies {

    implementation project(':common')
    implementation project(':application')

    implementation 'org.apache.commons:commons-io:1.3.2' // Para leitura de arquivos

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation platform('software.amazon.awssdk:bom:2.17.52')
    implementation 'com.amazonaws:aws-java-sdk-ec2:1.12.653'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'


}

javafx {
    version = "17"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

run {
    jvmArgs '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'//, '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx'
}

application {
    mainClassName = 'br.com.felipemira.validatevarsaws.DesktopApplication'
    applicationDefaultJvmArgs = ['--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED']
}



test {
    useJUnitPlatform()
}